--- a/index.html
+++ b/index.html
@@ -4,58 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Upload and Processing</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 20px;
+      .main-function {
+        max-width: 400px;
+        margin: 0 auto;
       }
-
-      h1 {
-        color: #333;
-      }
-
-      input[type="file"] {
-        margin-bottom: 10px;
-      }
-
-      button {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background-color: #0056b3;
-      }
-
       .output {
-        margin-top: 20px;
+        max-width: 600px;
+        margin: 0 auto;
       }
-
-      .output img {
-        max-width: 100%;
-        height: auto;
-        border: 1px solid #ddd;
-        padding: 5px;
-        margin-top: 10px;
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        width: fit-content;
+        height: 100vh;
+        flex-direction: column;
       }
     </style>
   </head>
+  <body class="container">
+    <div class="input">
+      <h1 class="text-primary text-center">Upload and Process Image</h1>
+      <div class="main-function card p-4 shadow-sm">
+        <div class="mb-3">
+          <input type="file" id="imageInput" class="form-control" accept="image/*" required />
+        </div>
+        <button id="uploadButton" type="button" class="btn btn-primary w-100">Upload and Process</button>
+      </div>
+    </div>
 
-  <body>
-    <h1>Upload and Process Image</h1>
-    <input type="file" id="imageInput" accept="image/*" required />
-    <button id="uploadButton">Upload and Process</button>
-
-    <div class="output">
-      <h2>Processed Image:</h2>
+    <div class="output mt-4 text-center">
+      <h2 id="processed-image-headding" class="text-secondary d-none">Processed Image:</h2>
       <div id="result"></div>
+      <a id="downloadLink" class="btn btn-success mt-3 d-none" download>Download Processed Image</a>
     </div>
 
     <script>
-      // Handle file upload and processing
       document.getElementById("uploadButton").addEventListener("click", function () {
         const fileInput = document.getElementById("imageInput");
         const file = fileInput.files[0];
@@ -74,18 +61,27 @@
         })
           .then((response) => response.text())
           .then((data) => {
+            const resultDiv = document.getElementById("result");
+            const downloadLink = document.getElementById("downloadLink");
+            document.getElementById("processed-image-headding").classList.remove("d-none");
+
             if (data.startsWith("/uploads/processed_")) {
-              // Display the processed image
-              document.getElementById("result").innerHTML = `<img src="${data}" alt="Processed Image">`;
+              resultDiv.innerHTML = `<img src="${data}" alt="Processed Image" class="img-fluid border rounded shadow-sm mt-3">`;
+              downloadLink.href = data;
+              downloadLink.classList.remove("d-none");
             } else {
-              // Display the error message
-              document.getElementById("result").innerHTML = `<p style="color: red;">${data}</p>`;
+              resultDiv.innerHTML = `<p class="text-danger">${data}</p>`;
+              downloadLink.classList.add("d-none");
+              document.getElementById("processed-image-headding").classList.add("d-none");
             }
           })
           .catch((error) => {
-            document.getElementById("result").innerHTML = `<p style="color: red;">Error: ${error.message}</p>`;
+            console.error("Fetch error:", error);
+            document.getElementById("result").innerHTML = `<p class="text-danger">Error: ${error.message}</p>`;
           });
       });
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
